<resources>
    <string name="app_name">TestKotlinProject</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="second_name">Second name</string>
    <string name="last_name">Last name</string>
    <string name="done">Done</string>
</resources>